Add get anidb ep by file id method
