# Shizou.WebApi/openapi.json
@@ -259,6 +259,46 @@
         }
       }
     },
+    "/api/AniDbEpisodes/ByAniDbFileId/{id}": {
+      "get": {
+        "tags": [
+          "AniDbEpisodes"
+        ],
+        "operationId": "ShizouHttpClient_AniDbEpisodesByAniDbFileId",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/AniDbEpisode"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/api/AniDbFiles": {
       "get": {
         "tags": [
